@@ -65,7 +65,7 @@ add_button("Clear Table ", callback="ClearTable")
 add_table("Table##widget", ["Column 1", "Column 2", "Column 3", "Column 4"])
 
 def closeit(sender, data):
-    items = get_all_items()
+    items = get_windows()
     for item in items:
         print(item)
     print("closing tables")
